Fix external link icon wrapping

--- a/site/src/assets/main.css
+++ b/site/src/assets/main.css
@@ -107,4 +107,10 @@
 			margin: 0;
 		}
 	}
+
+	/* we need a fallback value for this: */
+	.mt-external-link-icon {
+		margin-top: 0.4em;
+		margin-top: calc((1lh - 1em) / 2 + 0.0625em);
+	}
 }
